src/snapshots/hemlis_lib__parser__tests__qualified_do.snap
---
source: src/parser.rs
expression: "p_expr(r\" A.B.do\n                    foo bar\n            \")"
---
13 of 13
===
Module
 Header
  MName
   (0, 7)->(0, 11)
  NULL
  (0, 0)->(0, 6)
  (0, 12)->(0, 17)
  Decl::Def
   Name
    (2, 0)->(2, 1)
   GuardedExpr::Unconditional
    Expr::Do
     Qual
      (2, 5)->(2, 8)
     (2, 9)->(2, 11)
      DoStmt::Stmt
       NULL
       Expr::App
        Expr::Ident
         QName
          NULL
          Name
           (3, 20)->(3, 23)
        Expr::Ident
         QName
          NULL
          Name
           (3, 24)->(3, 27)
===
